complete project, remain carousel

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 				<li class="hover:text-[#FCB623]"><a href="#">Team</a></li>
 				<li
 					class="px-5 2xl:px-[50px] py-2 2xl:py-[21px] bg-[#FCB623] rounded-full font-semibold text-lg 2xl:text-[24px]">
-					<a href="#">Contact</a>
+					<a href="#contact_us">Contact</a>
 				</li>
 			</ul>
 			<div class="flex items-center gap-8 2xl:gap-[77px]">
@@ -497,8 +497,6 @@
 			<!-- Tabs -->
 
 			<div class="container">
-
-
 				<div id="all" class="tab-content active" role="tabpanel" aria-labelledby="all-tab">
 					<div class="p-3 lg:p-6 bg-white flex flex-col md:grid grid-cols-7 gap-4 h-fit lg:h-[381px]">
 						<div class="col-span-1"></div>
@@ -714,7 +712,7 @@
 
 
 		<!-- Get In Touch -->
-		<div class="mt-[106px] px-10 2xl:px-[170px]">
+		<div id="contact_us" class="mt-[106px] px-10 2xl:px-[170px]">
 			<div>
 				<h1 class="font-extrabold text-[32px] md:text-[45px] lg:text-[64px] max-w-[964px]">Interested?</h1>
 				<h1 class="font-extrabold text-[32px] md:text-[45px] lg:text-[64px] mb-9 xl:mb-[106px] max-w-[964px]">
@@ -751,11 +749,11 @@
 					</div>
 					<div class="flex items-center gap-6 mt-5">
 						<img src="assets/images/phone.svg" alt="">
-						<p class="text-[20px] text-[#111227]">+420 77 63 63 062</p>
+						<a href="tel:+420776363062" class="text-[20px] text-[#111227]">+420 77 63 63 062</a>
 					</div>
 					<div class="flex items-center gap-6 mt-5">
 						<img src="assets/images/send.svg" alt="">
-						<p class="text-[20px] text-[#111227]">support@digicrafts.com</p>
+						<a href="mailto:support@digicrafts.com" class="text-[20px] text-[#111227]">support@digicrafts.com</a>
 					</div>
 				</div>
 			</div>
